--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>🍸 Carnet & Quiz Cocktails</title>
 <style>
-  /* même style qu'avant, inchangé pour préserver l’apparence */
+  /* Styles globaux */
   :root {
     --main-color: #ff6f61;
     --accent-color: #ffd166;
@@ -156,6 +156,7 @@
     background-color: rgba(0,0,0,0.5);
     justify-content: center;
     align-items: center;
+    pointer-events: none; /* Bloque les clics en dehors de la boîte */
   }
   .modal-content {
     background: white;
@@ -164,6 +165,13 @@
     text-align: center;
     max-width: 400px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    z-index: 1000;
+    pointer-events: auto; /* Permet les clics dans la boîte */
+  }
+  .modal-content button.close-btn {
+    background-color: #ccc;
+    color: #333;
+    margin-top: 1rem;
   }
   @keyframes bounce {
     0%, 100% { transform: translateY(0); }
@@ -207,15 +215,18 @@
     <p id="quizResultText"></p>
     <button onclick="restartFullQuiz()">🔁 Rejouer tous</button>
     <button onclick="restartFailedOnly()">🎯 Revoir seulement les erreurs</button>
+    <button class="close-btn" onclick="document.getElementById('quizModal').style.display = 'none'">❌ Fermer</button>
   </div>
 </div>
 <script>
 let cocktails = JSON.parse(localStorage.getItem("cocktails")) || [];
 let editingIndex = null;
+
 function saveCocktails() {
   localStorage.setItem("cocktails", JSON.stringify(cocktails));
   displayCocktails();
 }
+
 function addCocktail(e) {
   e.preventDefault();
   const name = document.getElementById("name").value.trim();
@@ -229,7 +240,9 @@ function addCocktail(e) {
   }
   e.target.reset();
   saveCocktails();
+  startQuiz(); // relance quiz avec la nouvelle liste
 }
+
 function displayCocktails() {
   const display = document.getElementById("cocktailDisplay");
   display.innerHTML = cocktails.map((c, i) => `
@@ -240,9 +253,10 @@ function displayCocktails() {
         ${c.image ? `<img src="${c.image}" alt="${c.name}">` : ""}
       </div>
       <button class="edit-btn" onclick="editCocktail(${i})">✏️ Modifier</button>
-    </div>`
-  ).join("");
+    </div>
+  `).join("");
 }
+
 function editCocktail(index) {
   const c = cocktails[index];
   document.getElementById("name").value = c.name;
@@ -251,7 +265,9 @@ function editCocktail(index) {
   editingIndex = index;
   window.scrollTo({ top: 0, behavior: "smooth" });
 }
+
 let shuffledCocktails = [], flashcardIndex = 0, sessionResults = [];
+
 function shuffle(arr) {
   for (let i = arr.length - 1; i > 0; i--) {
     const j = Math.floor(Math.random() * (i + 1));
@@ -259,12 +275,14 @@ function shuffle(arr) {
   }
   return arr;
 }
+
 function startQuiz() {
   shuffledCocktails = shuffle([...cocktails]);
   flashcardIndex = 0;
   sessionResults = [];
   showFlashcard();
 }
+
 function showFlashcard() {
   if (flashcardIndex >= shuffledCocktails.length) {
     endQuiz();
@@ -284,24 +302,29 @@ function showFlashcard() {
       </div>
     </div>`;
 }
+
 function revealFlashcard(text) {
   document.getElementById("flashcardReveal").innerHTML = `<p>${text}</p>`;
 }
+
 function recordResult(known) {
   sessionResults.push({ index: flashcardIndex, known });
   flashcardIndex++;
   showFlashcard();
 }
+
 function endQuiz() {
   const correct = sessionResults.filter(r => r.known).length;
   const total = sessionResults.length;
   document.getElementById("quizResultText").textContent = `${correct} bonnes réponses sur ${total}`;
   document.getElementById("quizModal").style.display = "flex";
 }
+
 function restartFullQuiz() {
   document.getElementById("quizModal").style.display = "none";
   startQuiz();
 }
+
 function restartFailedOnly() {
   const failedIndexes = sessionResults.filter(r => !r.known).map(r => r.index);
   shuffledCocktails = failedIndexes.map(i => shuffledCocktails[i]);
@@ -310,8 +333,15 @@ function restartFailedOnly() {
   document.getElementById("quizModal").style.display = "none";
   showFlashcard();
 }
+
 displayCocktails();
 startQuiz();
+
+// Fermeture modale en cliquant hors du contenu
+window.addEventListener('click', function(e) {
+  const modal = document.getElementById("quizModal");
+  if (e.target === modal) {
+    modal.style.display = "none";
+  }
+});
 </script>
-</body>
-</html>
